--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ GEMINI_API_KEY=your_gemini_api_key_here
 
 # Get your OpenAI API key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
+# OPENAI_BASE_URL=                            # Optional: Custom OpenAI endpoint (defaults to https://api.openai.com/v1)
 
 # Azure OpenAI mirrors OpenAI models through Azure-hosted deployments
 # Set the endpoint from Azure Portal. Models are defined in conf/azure_models.json
