refactor: new base class for model registry / loading

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,14 @@ py-modules = ["server", "config"]
 "*" = ["conf/*.json"]
 
 [tool.setuptools.data-files]
-"conf" = ["conf/custom_models.json", "conf/openrouter_models.json", "conf/azure_models.json"]
+"conf" = [
+    "conf/custom_models.json",
+    "conf/openrouter_models.json",
+    "conf/azure_models.json",
+    "conf/openai_models.json",
+    "conf/gemini_models.json",
+    "conf/xai_models.json",
+]
 
 [project.scripts]
 zen-mcp-server = "server:run"
